# data_types_library

./: .gitignore  .gitmodules  README.md  makefile
example/: list_uint8.c
src/: linked_list.c  linked_list.h  list.c  list.h
test/: CMakeLists.txt
test/linked_list/: CMakeLists.txt  linked_list_test.cpp  listTest.cpp
